@@ -1,3 +1,8 @@
+2007-11-13  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* times.c (trivfs_set_atime, trivfs_set_mtime): Adapt to ``struct
+	stat'' changes.
+
 2003-10-11  Marcus Brinkmann  <marcus@gnu.org>
 
 	* nosenders.c, notify-stubs.c: Remove obsolete files.
